# ssau-schedule-bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Jenkinsfile  Makefile  README.md  README_DEV.md  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260322_0001_initial_schema.py  20260322_0002_notification_log_type.py
app/api/jobs/: runner.py  scheduler.py  utils.py
app/api/rest/: __init__.py  app.py  exception_handler.py  init_routes.py
app/app_layer/interfaces/: __init__.py
app/app_layer/use_cases/: authenticate_user.py  check_telegram_chats.py  (+11 more)
app/di/: __init__.py  container.py  core_container.py  db_container.py  repositories_container.py  services_container.py  ssau_container.py  telegram_container.py  usecases_container.py
app/domain/: constants.py
app/entrypoints/: api_main.py  bot_main.py  init_db.py  worker_main.py
app/infra/: retry.py
app/logging/: __init__.py  config.py  context.py  filters.py  formatters.py  logger.py  redaction.py
app/settings/: __init__.py  alerts.py  api.py  config.py  database.py  metrics.py  notifications.py  security.py  ssau.py  telegram.py  valkey.py  workers.py
backend/: .gitignore  Jenkinsfile  README.md  README_DEV.md
backend/alembic/: script.py.mako
backend/envs/: common.env  local.env  prod.env
envs/: common.env  dev.env  local.env  prod.env
frontend/: .env.example  .gitignore  Jenkinsfile  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
src/ssau_schedule_bot/: main.py
tests/integration/: test_sqlite_uow.py
tests/unit/: test_check_telegram_chats_use_case.py  test_nextjs_login_scraper.py  test_notification_planner.py  test_ssau_auth_client_metadata.py  test_ssau_dto_contracts.py  test_telegram_renderer.py  test_week_calculator.py
(+394 files in other folders)
