[project]
name = "ssau-schedule-bot"
version = "0.1.0"
description = ""
authors = [{ name = "golosoman", email = "constan.lapin2015@mail.ru" }]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "aiogram (>=3.25.0,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pydantic-settings (>=2.13.0,<3.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "tzdata (>=2025.3,<2026.0)",
    "dependency-injector (>=4.48.3,<5.0.0)",
    "prometheus-client (>=0.24.1,<0.25.0)",
    "opentelemetry-api (>=1.39.1,<2.0.0)",
    "opentelemetry-sdk (>=1.39.1,<2.0.0)",
    "opentelemetry-exporter-otlp (>=1.39.1,<2.0.0)",
    "cryptography (>=46.0.5,<47.0.0)",
    "fastapi (>=0.129.0,<0.130.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "apscheduler (>=3.11.2,<4.0.0)",
    "tenacity (>=9.1.4,<10.0.0)",
]

[tool.poetry]
packages = [{ include = "app" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.1,<0.16.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "types-requests (>=2.32.4.20260107,<3.0.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
